# rust-notes

./: README.md  module_system.md  ownership.md
1-practica-intro-rust/examples/: enums.rs  funciones.rs  option.rs  ownwership.rs  threads.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: main  main.rs  run.sh
hello_world_with_cargo/: create_project.sh
hello_world_with_cargo/hello_cargo/: run1.sh  run2.sh  run3.sh
syntaxis/: collection_maps.rs  collection_strings.rs  collection_vectors.rs  control_flow.rs  data_types.rs  enums.rs  error_handling.rs  function.rs  methods.rs  pattern_matching.rs  structs.rs  variables.rs
